--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,19 @@
             "email": "bennettb@hey.com"
         }
     ],
-    "require": {},
     "autoload": {
         "psr-4": {
             "bennettblack\\alpacalaravel\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "bennettblack\\alpacalaravel\\Tests\\":"tests"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit --testdox",
+        "test-f": "vendor/bin/phpunit --filter"
     },
     "extra": {
         "laravel": {
@@ -24,5 +32,13 @@
                 "Alpaca": "bennettblack\\alpacalaravel\\Facades\\Alpaca"
             }
         }
+    },
+    "require": {
+        "illuminate/support": "^6|^7|^8",
+        "php": "^7.2 || ^8.0"
+    },
+    "require-dev": {
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^9.5"
     }
 }
