--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     },
     "require": {
         "illuminate/support": "^6|^7|^8",
-        "php": "^7.2 || ^8.0"
+        "php": "^7.2 || ^8.0",
+        "guzzlehttp/guzzle": "^7.3"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
