Added initial working tests

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit --testdox",
-        "test-f": "vendor/bin/phpunit --filter"
+        "test-f": "vendor/bin/phpunit --filter",
+        "test -v": "vendor/bin/phpunit --verbose"
     },
     "extra": {
         "laravel": {
